SystemUI: custom quick toggle menu
Add a custom quick toggle menu by tapping the Settings icon in the
notification pulldown (Long-press to launch normal Settings).

Credits to "romanbb" (TeamKang)

Screenshot:
http://imgur.com/G1sjR

Conflicts:

	packages/SystemUI/res/layout/status_bar_expanded.xml
	packages/SystemUI/res/values/strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/PhoneStatusBar.java
	packages/SystemUI/src/com/android/systemui/statusbar/policy/BrightnessController.java
	packages/SystemUI/src/com/android/systemui/statusbar/policy/WifiController.java

--- a/packages/SystemUI/res/layout/status_bar_expanded.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded.xml
@@ -34,8 +34,8 @@
         android:background="@drawable/notification_header_bg"
     >
         <com.android.systemui.statusbar.powerwidget.PowerWidget android:id="@+id/exp_power_stat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
         />
 
         <RelativeLayout
@@ -88,7 +88,12 @@
                 android:src="@drawable/ic_notify_clear"
                 android:contentDescription="@string/accessibility_clear_all"
                 />            
-        </RelativeLayout>
+        </RelativeLayout>    
+    <include layout="@layout/quick_toggles" 
+                android:id="@+id/quick_toggles"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
     </LinearLayout>
 
     <View
