[WIP] Stylus gestures features (1/2)
Forward-port of http://review.cyanogenmod.com/#/c/18610/
to JB

Conflicts:

	core/res/res/values/config.xml

Change-Id: Ie0ab71d3a2283078601db8405aaabe1d81b27665

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -964,4 +964,7 @@
          the wallpaper width suggestion by the launcher may be too large for
          the GPU to handle. -->
     <integer name="config_wallpaperMaxWidth">-1</integer>
+
+    <!-- Boolean to enable Stylus gestures -->
+    <bool name="config_stylusGestures">false</bool>
 </resources>
